--- a/tesis.tex
+++ b/tesis.tex
@@ -51,11 +51,14 @@
     {\normalfont\normalsize\bfseries}{\thesubparagraph}{1em}{}
 \titlespacing*{\subparagraph}{\parindent}{3.25ex plus 1ex minus .2ex}{.75ex plus .1ex}
 
+
+%%%%
+
 \titulo{``Desarrollo de aplicación web "Network WE" como método de comunicación internacional para promover la igualdad de género en UABJB y UDEC.''}
-\fecha{FEBRERO, 2023}
+\fecha{Mayo, 2023}
 \autor{JULIANA CASTILLO ARAUJO}
 \grado{INGENIERO EN SISTEMAS COMPUTACIONALES}
-\asesorA{Nombres Apellidos}
+\asesorA{DR. MAURICIO GABRIEL OROZCO DEL CASTILLO}
 \asesorB{Nombres Apellidos}
 \modalidad{TESIS}
 \carrera{INGENIERÍA EN SISTEMAS COMPUTACIONALES}
@@ -85,18 +88,24 @@ Dedicado a Ana Hurtado Mesa, Mary Rubiano Acosta, Yesica Gómez Ortiz, Adriana A
 \addcontentsline{toc}{section}{Dedicatoria}
 
 \begin{abstract}
+
 Se realizó una investigación en conjunto con dos universidades, la Universidad Autónoma del Beni “José Ballivian” (UABJB) y la Universidad de Cundinamarca (UDEC) para el correcto desarrollo de una aplicación web para la red de conocimiento Network WE (Women Engineering), con el objetivo de promover la igualdad de género en el sector tecnológico e ingenieril en ambas universidades durante el mes de Agosto del 2022 haciendo un uso del levantamiento de requerimientos en software en las fases de la metodología  XP (Extreme Programming) que permitió desarrollar una investigación aplicada en el nivel cuantitativo y cualitativo beneficiando a las estudiantes nacionales e internacionales de ingeniería de sistemas.
+
 \end{abstract}
+
 \addcontentsline{toc}{section}{Resumen}
+
 \selectlanguage{english}
+
 \begin{abstract}
+
 An investigation was carried out in conjunction with two universities, the Autonomous University of Beni "José Ballivian" (UABJB) and the University of Cundinamarca (UDEC) for the correct development of a web application for the Network WE (Women Engineering) knowledge network. with the objective of promoting gender equality in the technological and engineering sector in both universities during the month of August 2022, making use of the survey of software requirements in the phases of the XP (Extreme Programming) methodology that allowed the development of an investigation applied at the quantitative and qualitative level, benefiting national and international systems engineering students.
 
 
 \end{abstract}
+
 \selectlanguage{spanish}
 \addcontentsline{toc}{section}{Abstract}
-
 \tableofcontents
 \addcontentsline{toc}{section}{Índice general}
 {\noskip\listoffigures} 
@@ -107,17 +116,23 @@ An investigation was carried out in conjunction with two universities, the Auton
 \mainmatter
 
 \fontfamily{ptm}\selectfont
+
 \chapter{Introducción}
+
 La comunicación es la parte esencial del conocimiento, con ella podemos transmitir información que a menudo es proyectada hacia ambientes de investigación. Un grupo de personas que interactúan entre sí produciendo y socializando el conocimiento es el resultado de una actividad conocida como red de conocimiento.  La cantidad de mujeres en ingeniería es menor a la totalidad de los hombres en esta área en el mundo, en una investigación realizada por ACIS (Asociación Colombiana de Ingenieros de Sistemas) se descubrió que en el 2021 solo el 40\% de las mujeres se desempeña en el sector ingenieril. 
 
 Basadas en esta cifra nace el proyecto de desarrollar para la red de conocimiento Network WE una aplicación web que permita conectar y promover la igualdad de género a más mujeres a nivel nacional e internacional en las áreas STEM (Science, Technology, Engineering and Mathematics) teniendo como foco principal de estrategia las universidad UABJB (Universidad Autónoma del Beni José Ballivian) y UDEC (Universidad de Cundinamarca).
 
+\section{Antecedentes del problema}
+
+Diversos estudios han demostrado que la participación de la mujer en areas de conocimiento aplicadas en las diversas ramas de ingenieria (sistemas, aeroespacial, civil y fisica) demuestran ser de una tasa reducida en comparación a la tasa de participación masculina \cite{RazoGodinez2008} con ello se ha visto una alta problemática a ser discutida, planteandose en la siguiente pregunta ¿Cuáles son las carreras más atractivas o demandadas por la mujeres en el área de ingeniería y por qué su tasa de participación no logra ser equivalente a la participación masculina?
 
 \section{Planteamiento del problema}
 
-Históricamente, las matemáticas, ciencia, ingeniería y la tecnología son disciplinas de estudio que se le atribuyen a grandes personajes, “hombres de ciencia”, Por ejemplo la historia de Albert Einstein y su esposa Mileva Maric relatada en el libro “The Other Einstein” en donde la autora Marie Benedict narra todos los años de…relación de la pareja, que van de 1896, cuando ambos estudiaban física en Zurich, hasta su divorcio en 1914. A lo largo de la novela se destaca la lucha constante de Mileva Maric por tener éxito en un campo de estudio dominado por los hombres. \cite{Benedict2018} Este es un factor clave de la problemática hacia el menosprecio que existió y que existe en artículos científicos de la mujer en las áreas STEM. Otros personajes como Leonardo da Vinci y Darwin dieron descubrimientos e invenciones que han aportado a la humanidad en desarrollos que cambiaron el mundo, sin embargo, el papel de la mujer en estas disciplinas no ha sido visualizado, ni reconocido en la ciencia.
+Históricamente, las matemáticas, ciencia, ingeniería y la tecnología son disciplinas de estudio que se le atribuyen a grandes personajes, “hombres de ciencia”, Por ejemplo la historia de Albert Einstein y su esposa Mileva Maric relatada en el libro “The Other Einstein” en donde la autora Marie Benedict narra todos los años de…relación de la pareja, que van de 1896, cuando ambos estudiaban física en Zurich, hasta su divorcio en 1914. A lo largo de la novela se destaca la lucha constante de Mileva Maric por tener éxito en un campo de estudio dominado por los hombres. \cite{Jerome2007} Este es un factor clave de la problemática hacia el menosprecio que existió y que existe en artículos científicos de la mujer en las áreas STEM. Otros personajes como Leonardo da Vinci y Darwin dieron descubrimientos e invenciones que han aportado a la humanidad en desarrollos que cambiaron el mundo, sin embargo, el papel de la mujer en estas disciplinas no ha sido visualizado, ni reconocido en la ciencia.
 
 Dicho esto aunque las mujeres han estado presentes en cada ambito, no se le ha visto  socialmente el reconocimiento de su conocimiento al estar este en manos masculinas evidenciando una exclusión hacia la mujer.
+
 \section{Propuesta de solución}
 
 \begin{itemize}
@@ -126,6 +141,24 @@ Dicho esto aunque las mujeres han estado presentes en cada ambito, no se le ha v
     \item Apoya el quinto objetivo de desarrollo sostenible; Igualdad de género
 \end{itemize}
 
+\section{Objetivos}
+
+\subsection{Objetivo general}
+Desarrollar de un aplicativo web para la red de conocimientos Network WE (Women Engineering) que permita fortalecer el crecimiento en la participación digital de las jóvenes en la UABJB y la UDEC
+
+\subsection{Objetivos específicos}
+  
+\begin{itemize}
+
+    \item Caracterizar la situación de género en la seccional Ubaté y la universidad autónoma del Beni José Ballivian.
+    
+    \item Definir el requerimiento funcional y no funcional de la aplicación web.
+    
+    \item Identificar los roles y comportamientos de las estudiantes de UABJB (Universidad Autónoma del Beni José Ballivian) y UDEC (Universidad de Cundinamarca).
+    
+    \item Diseñar la aplicación web de tal manera que sea intuitiva y amigable para las estudiantes que se registren e inicien sesión en la red.
+    
+\end{itemize}
 
 \section{Hipótesis}
 
@@ -137,38 +170,33 @@ Según la Organización de la Naciones Unidas) existe un enfoque basado en el pl
 
 Razón por la cual una red de conocimiento permitirá implementar el quinto objetivo de desarrollo sostenible igualdad de género, la viabilidad de implementar este objetivo en un espacio de investigación y desarrollo multidisciplinario, hace que mediante la transferencia de conocimiento en diferentes areas de la ingeniería se creen espacios de interacción en temáticas como: brecha de género a nivel nacional, internacional y global, análisis multidisciplinario en áreas ingenieril aplicadas hacia estudiantes y profesionales, investigación en la metodología cuantitativa, empoderamiento, liderazgo, comunicación con herramientas de Las Tecnologías de la Información y las Comunicaciones, entre otras. Por ello estás áreas temáticas aplicadas en una red de conocimiento evidencian la necesidad de promover la creación de la red de mujeres, desde las universidades, contando con la participación estratégica de estudiantes universitarias de la UDEC, la UABJB, los colegios y las mujeres que se desempeñen en el ámbito laboral en áreas tecnológicas.
 
-
-\section{Objetivos}
-
-\subsection{Objetivo general}
-Desarrollar de un aplicativo web para la red de conocimientos Network WE (Women Engineering) que permita fortalecer el crecimiento en la participación digital de las jóvenes en la UABJB y la UDEC
-
-\subsection{Objetivos específicos}
-  
-\begin{itemize}
-    \item Caracterizar la situación de género en la seccional Ubaté y la universidad autónoma del Beni José Ballivian.
-    \item Definir el requerimiento funcional y no funcional de la aplicación web.
-    \item Identificar los roles y comportamientos de las estudiantes de UABJB (Universidad Autónoma del Beni José Ballivian) y UDEC (Universidad de Cundinamarca).
-    \item Diseñar la aplicación web de tal manera que sea intuitiva y amigable para las estudiantes que se registren e inicien sesión en la red.
-\end{itemize}
-
 \chapter{Fundamento teórico}
+
+\section{Marco teórico}
 
 Para esta etapa de fundamento teorico se realizo una investigacion clave teniendo en cuenta la hipótesis y los objetivos planteados previamente para esta investigación.
 
 
-\section{Marco teórico}
+\section{Metodologias para el desarrollo del aplicativo web}
 
-\section{Metodología XP}
-La metodología XP es un conjunto de técnicas que ayuda a hacer los proyectos más rápido y flexible. Lo que se hace es crear un producto que le guste al cliente, por lo que es importante tener en cuenta lo que el cliente quiere. Se necesita saber exactamente lo que el cliente necesita para poder hacer lo que quiere.
+\subsection{Metodología XP}
 
-\section{Análisis}
-En la etapa de análisis realizamos las investigaciones y estudio de mercado de nuestra población objetivo, en este caso las mujeres estudiantes de la universidad Autónoma del Beni Jose Ballivian como las de la Universidad de Cundinamarca.
-Realizamos diferentes encuestas para la tabulación de la información precisa de la cantidad de mujeres en la carrera de ingeniería de sistemas en ambas universidades, la participación de las mismas en el área STEM (Science, Technology, Engineering and Mathematics) datos específicos de la participación de estas jóvenes en desarrollo de software el lenguaje de desarrollo de su preferencia es así que obtuvimos nuestro árbol de problemas mediante el estudio de causas y efectos de la participación de las jóvenes en la industria tecnológica.
+La metodología XP es un conjunto de técnicas que ofrecen agilidad y flexibilidad en la gestión de proyectos, esta se centra en crear un producto según las necesidades del cliente, es por ello por lo que las especificaciones del cliente están muy presentes a la hora del desarrollo del mismo es por lo cual que se debe generar un levantamiento de requerimientos específicos para el cliente.
 
-\section{Diseño}
-La etapa de diseño se la desarrolla mediante los resultados de nuestro levantamiento de requerimientos y el análisis de la información recopilado en la fase anterior, una vez obtenidos estos resultados se prosiguió a el diseño de la planificación de estrategias para alcanzar los objetivos del proyecto previamente establecidos y actividades a realizarse en el transcurso de este.
-\subsection{Design Thinking}
+
+Para la realizacion oportuna del diseño del aplicativo se uso la metodologia de desarrollo XP (Extreme Programming) en su fase II la cual consistio en:
+
+\begin{itemize}
+    \item Fase II : Simplicidad
+
+    Al realizar el diseño del aplicarivo se recalca el diseño optimo y completo del sistema, basado desde la perspectiva que pueda lograr la comunicación con las usuarias que ingresen a la red de conocimiento Network WE (Women Engineering), para ello se toma en cuenta la filosofia de la simplicidad que se emplea en la metodologia XP: "Simplicidad en el diseño"
+
+    La simplicidad efectua la rapidez visual del sistema siempre que sea implementado en menos tiempo  
+
+\end{itemize}
+
+\subsection{Metodología Design Thinking}
+
 El design thinking es un método que se centra en entender y dar solución a las necesidades reales de un usuario
 
 El proceso óptimo del método del design thinking consiste en analizar las siguientes fases en desarrollo del proyecto a entregar al usuario:
@@ -191,7 +219,9 @@ El proceso óptimo del método del design thinking consiste en analizar las sigu
     En esta etapa 5, los clientes prueban y evalúan los prototipos creados anteriormente y proporcionan comentarios. El equipo puede hacer correcciones en función de estas críticas. Esta fase de validación es importante para descubrir errores y aciertos. A su vez esta etapa se enfoca en crear soluciones que se basen en cómo los usuarios reales piensan, sienten y se comportan. Permite obtener nuevos conocimientos, desarrollar nuevas formas de ver el producto y sus posibles usos, y comprender más profundamente a los usuarios y los problemas que enfrentan.
 
 \end{itemize}
- 
+
+\section{Aplicativo web}
+
 
 \section{Estado del arte}
 Es importante identificar a nivel ingenieril cada uno de los antecedentes de mujeres en ingeniería en un ámbito nacional e internacional, sobre las diferentes visiones enfocadas a promover de manera estratégica a estudiantes profesionales y mujeres que se involucran de manera internacional a compartir su conocimiento. A continuación, se enuncia algunas de estas visiones encontradas en el estado de arte:
@@ -210,26 +240,29 @@ La autora Luz Gabriela Arango Gavira  describe cómo la presencia masculina pred
 \chapter{Desarrollo}
 
 
+
+
+\section{Desarrollo del aplicativo web}
+
+\subsubsection{Frontend}
+
+\subsubsection{Backend}
+Para lo que es el backend utilizamos un lenguaje para aplicativos web como lo es el Python que nos da una variedad de herramientas para el desarrollo de nuestro aplicativo web, en este caso se dio inicio al desarrollo de la ventana de registro donde convalidamos los datos que el usuario ingreso como los registros ya obtenidos en nuestra base de datos para el respectivo ingreso al aplicativo.
+
+ \begin{figure}[h]
+\centering
+'\includegraphics{figuras/primera-backend (1).png}'
+\caption{Estructuración de la primera estructuracion lógica del prototipo de la página web }
+\label{fig:Picture1.png}
+\end{figure}
+
+Se realiza las comparaciones correspondientes con nuestra base de datos para observar si el usuario ya se registro con los mismos datos y si es de esta manera mostramos el respectivo mensaje al usuario
+
+Se obtienen todos los datos y el usuario queda registrado para poder realizar esto creamos un método post que nos ayude con el registro correspondiente
+
+
 Network WE (Women Engineering) es un enfoque de desarrollo que plantea ser el espacio de interracción del conocimiento entre estudiantes de la Universidad de Cundinamarca y la Universidad Autonoma del Beni "José Ballivian", al existir un punto de conocimiento es fundamental comenzar a diseñar prototipos capaces de brindar un entorno educativo capaz de ser una de las principales fuentes de conocimiento para la red \cite{Latorre-Cosculluela2020}
 
-\section{Metodología de la investigación / Descripción de actividades}
-
-
-\section{Metodologia XP}
-
-La metodología XP es un conjunto de técnicas que ofrecen agilidad y flexibilidad en la gestión de proyectos, esta se centra en crear un producto según las necesidades del cliente, es por ello por lo que las especificaciones del cliente están muy presentes a la hora del desarrollo del mismo es por lo cual que se debe generar un levantamiento de requerimientos específicos para el cliente.
-
-
-Para la realizacion oportuna del diseño del aplicativo se uso la metodologia de desarrollo XP (Extreme Programming) en su fase II la cual consistio en:
-
-\begin{itemize}
-    \item Fase II : Simplicidad
-
-    Al realizar el diseño del aplicarivo se recalca el diseño optimo y completo del sistema, basado desde la perspectiva que pueda lograr la comunicación con las usuarias que ingresen a la red de conocimiento Network WE (Women Engineering), para ello se toma en cuenta la filosofia de la simplicidad que se emplea en la metodologia XP: "Simplicidad en el diseño"
-
-    La simplicidad efectua la rapidez visual del sistema siempre que sea implementado en menos tiempo  
-
-\end{itemize}
 
 \section{Investigacion mixta cuantitativa / cualitativa}
 \section{Tabulacion de resultados encuesta 1-levantamiento de requerimientos de la aplicacion web}
@@ -318,17 +351,80 @@ De las 15 estudiantes encuestadas más del 33.3 ingresaron en el periodo de año
 
 La herramienta de design thinking es capaz de obtener resultados capaces de alcanzar los objetivos del proyecto, para ello se inicio con la primera estructuración del diseño:
 
+%%%%% 
+
+\subsection{Prueba imagen con referencia y llamado de ruta en LATEX}
+Puedo referenciar la Figura \ref{fig:Picture1.png} facilmente
+%%%%%
+
+En cada una de estas fases se comprende que la enfatización es el proceso de comprensión de las necesidades de los usuarios, para el proyecto de la red utilizamos cinco procesos de enfatización
+
+\section{Desarrollo de la página web frontend}
+
+La parte de interacción con el usuario en este caso se la esta desarrollando mediante html y Python para darle una mejor experiencia al usuario de los que vendría a ser el aplicativo web, en este caso tenemos una ventanas la cual nos llevara a la siguiente dependiendo la opción que vayamos a elegir en este caso o iniciar sesión o registrarse
+
  \begin{figure}[h]
 \centering
-'\includegraphics{mockup1 (1).png}'
-\caption{Estructuración inicial fisica, desarrollo del aplicativo}
+'\includegraphics{visual-front.png}'
+\caption{Estructuración de la semántica en el editor de código Visual Studio Code}
+\label{fig:Picture1.png}
+\end{figure}
+
+Luego depende a la opción que se maneje nos llevara a lo que es el registro o el login, en este caso tenemos lo que es la ventana de registro donde mostramos los datos que decaemos que el usuario ingrese a para el respectivo registro
+
+ \begin{figure}[h]
+\centering
+'\includegraphics{visual-front-2.png}'
+\caption{Estructuración de la pagina web codigo estructurado en el editor de codigo Visual Studio Code }
 \label{fig:Picture1.png}
 \end{figure}
 
 
 \chapter{Resultados}
 
+El proyecto de desarrollo de la aplicación web "Network WE" tiene como objetivo promover la igualdad de género en las instituciones UABJB y UDEC a partir de ello se crea propone la creación de una base de datos desarrollada en SQL (Structured Query Language) que incluya las siguientes variables:
+
+    \begin{table}[htbp]
+        \centering
+        \caption{Variables de identificacion de usuarias registradas en Network WE}
+        \label{tab:variables}
+        \begin{tabular}{cc}
+            \toprule
+            Entidad & Tipo de variable   \\
+            \midrule
+            Id\_User & Int \\
+            Nombre\_User & String \\
+            Contraseña\_User & Varchar \\
+            Correo electrónico\_User & Varchar \\
+            Telefono\_User & Int \\
+            \bottomrule
+        \end{tabular}
+    \end{table}
+
+
 \chapter{Conclusiones}
+
+La creación de "Network WE" refleja una actitud proactiva hacia la igualdad de género, al proporcionar una plataforma que fomenta la participación y la conciencia en un contexto global.
+
+Nuevas oportunidades para la colaboración y el intercambio de conocimientos entre la UABJB y la UDEC.
+
+Esta plataforma proporciona un método de comunicación que permite a las personas de diferentes ubicaciones geográficas conectarse y colaborar en la promoción de la igualdad de género. 
+
+Finalmente, se cumplieron con los objetivos específicos para dar continuidad al desarrollo final de la propuesta para, dichos objetivos se muestra a continuación:
+
+
+\begin{itemize}
+
+\item Se realizo de manera óptima la caracterización de la situación de género en la seccional Ubaté y la universidad autónoma del Beni José Ballivian mediante 4 encuestas desarrolladas desde Google Forms.
+
+\item Se implemento la psicología del color para poder elegir los colores relacionados al desarrollo de la aplicación web para la red de conocimiento Network WE (Women Engineering) 
+
+\item Se promovió la participación de mujeres en temas tecnológicos con interacción y fortalecimiento en la ingeniería mediante la unión de investigación con UABJB (Universidad Autónoma del Beni José Ballivián) y UDEC (Universidad de Cundinamarca)
+
+\end{itemize}
+
+
+
 
 \backmatter
 \addcontentsline{toc}{chapter}{Referencias}
